feat(gradle): support bootJar + WAR, Spotless formatting, and configuration cache